data_url/data_url_27100.txt
Greetings,
I'm trying to install nuSQuIDS and am receiving the following compiler error:
$ ./configure --with-hdf5=/usr/local/hdf5 --with-squids=/usr/local
Looking for pkg-config...
Looking for gsl...
Found gsl version 1.16
Checking manually specified HDF5...
Looking for hdf5...
Checking manually specified SQUIDS...
Generating config file...
Generating version header...
Generating makefile...
Done.
To build library, run the following: make
After, to build examples: make examples
$ make
Compiling src/nuSQuIDS.cpp to build/nuSQuIDS.o
src/nuSQuIDS.cpp:625:38: error: invalid argument; expected 'enable' or 'disable'
#pragma clang loop vectorize(assume_safety)
^
1 error generated.
make: *** [build/nuSQuIDS.o] Error 1
It looks like something has changed in clang's pragma syntax that I will need to account for. I beleive I wrote this against 3.9 and tested with 4.0; what version are you using which complains?
Apple LLVM version 6.1.0 (clang-602.0.53) (based on LLVM 3.6.0svn)
Target: x86_64-apple-darwin14.5.0
Thread model: posix
I have applied a fix in r477 while I think will resolve this (by not attempting vectorization with clang versions which are too old), but there was some educated guesswork involved where Apple's version numbers were concerned, so let me know whether it helps or not.
That seems to have done it!  The install went forward and the install checks passed.  I'll give the examples a try tonight.  Thank you very much!
